nodata .clink loading refreshing.

--- a/fresh/src/main/res/layout/activity_main.xml
+++ b/fresh/src/main/res/layout/activity_main.xml
@@ -20,5 +20,6 @@
         android:scrollbarStyle="insideInset"
         android:scrollbars="vertical">
 
+        <!--android:listSelector="@android:color/transparent"-->
     </com.example.fresh.view.XListView>
 </RelativeLayout>
