--- a/fresh/src/main/res/layout/xlistview_footer.xml
+++ b/fresh/src/main/res/layout/xlistview_footer.xml
@@ -3,39 +3,66 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/xlistview_footer_state"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/xlistview_footer_nodataimg"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher" />
-
-        <TextView
-            android:id="@+id/xlistview_footer_nodatatext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:paddingTop="15dp"
-            android:text="没有数据" />
-    </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/xlistview_footer_nodata"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/xlistview_footer_nodateloading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="invisible">
+
+            <com.example.fresh.view.LoadView
+                android:id="@+id/xlistview_footer_nodataprogressbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/xlistview_footer_state"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/xlistview_footer_nodataimg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/xlistview_footer_nodatatext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:paddingTop="15dp"
+                android:text="没有数据" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <!--list foot loading and normal-->
+    <RelativeLayout
         android:id="@+id/xlistview_footer_content"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:background="@android:color/transparent"
+        android:padding="5dp">
 
         <LinearLayout
             android:id="@+id/xlistview_footer_progressbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:background="@android:color/transparent"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:visibility="gone">
@@ -58,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:padding="5dp"
+            android:padding="10dp"
             android:text="@string/xlistview_footer_hint_normal" />
     </RelativeLayout>
 
